@@ -131,6 +131,16 @@ in <strong>Directory-based Tasks</strong>, and see the
       Default excludes are used when omitted.</td>
     <td valign="top" align="center">No</td>
   </tr>
+  <tr>
+    <td valign="top">deleteonexit</td>
+    <td valign="top">
+      Indicates whether to use File#deleteOnExit() if there is a
+      failure to delete a file, this causes the jvm to attempt
+      to delete the file when the jvm process is terminating.
+      The default is false.
+      <em>Since Ant 1.6.2</em>
+    <td valign="top" align="center">No</td>
+  </tr>
 </table>
 <h3>Examples</h3>
 <pre>  &lt;delete file=&quot;/lib/ant.jar&quot;/&gt;</pre>
