@@ -94,7 +94,8 @@ Fixed bugs:
 
 * JDependTask did not close an output file. Bugzilla Report 28557.
 
-* Using <macrodef> could break XmlLogger. Bugzilla Report 28993.
+* Using <macrodef> could break XmlLogger. Bugzilla Report 28993
+.
 
 * <genkey> no longer requires keytool to be in your PATH.  Bugzilla
   Report 29382.
@@ -179,6 +180,8 @@ Other changes:
   DynamicConfigurator. Bugzilla Report 28436.
 
 * Add implicit nested element to <macrodef>. Bugzilla Report 25633.
+
+* Add deleteonexit attribute to <delete>.
 
 Changes from Ant 1.6.0 to Ant 1.6.1
 =============================================
